stopped codeblocks always having x scrollbar

--- a/_sass/modules/_code.scss
+++ b/_sass/modules/_code.scss
@@ -9,7 +9,7 @@
   border-radius: .2em;
   line-height: 1.4em;
   padding: 1em;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 @mixin code-inline {
